--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -34,13 +34,15 @@
 </head>
 <body>
     <div class="jumbotron">
+        <p class="lead">
+            @DateTime.Now.ToShortDateString()
+        </p>
         <h1 class="display-3">DOKTORLARIMIZI KEŞFEDİN!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         @*<p class="lead">
-               <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>*@
+           <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>*@
     </div>
     <div class="limiter">
         <div class="container-login100">
@@ -82,7 +84,7 @@
                             <span class="txt1">
                                 Hesabınız Yok mu?
                             </span>
-                            <a href="#" class="txt2">
+                            <a href="" class="txt2">
                                 Kaydol
                             </a>
                         </li>
