--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Doktor" asp-action="Index">Doktorlar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bağışçı" asp-action="Create">Bağışçılar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bağışçı" asp-action="Index">Bağışçılar</a>
                         </li>
                     </ul>
                 </div>
