--- a/Online-Clinic/Views/Bağışçı/Create.cshtml
+++ b/Online-Clinic/Views/Bağışçı/Create.cshtml
@@ -5,68 +5,90 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Bağışçı</h4>
+<h4>Bağışçı Kayıt</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AdSoyad" class="control-label"></label>
+                <label for="exampleTextarea">AD SOYAD</label>
                 <input asp-for="AdSoyad" class="form-control" />
                 <span asp-validation-for="AdSoyad" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="DoğumTarihi" class="control-label"></label>
+                <label for="exampleTextarea">DOĞUM TARİHİ</label>
                 <input asp-for="DoğumTarihi" class="form-control" />
-                <span asp-validation-for="DoğumTarihi" class="text-danger"></span>
+                <small class="form-text text-muted">**Bireysel bağışçılarımız içindir</small>
             </div>
-            <div class="form-group">
-                <label asp-for="Cinsiyet" class="control-label"></label>
-                <input asp-for="Cinsiyet" class="form-control" />
-                <span asp-validation-for="Cinsiyet" class="text-danger"></span>
+            <br />
+            <div>CİNSİYET</div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1">
+                    Kadın
+                </label>
             </div>
-            <div class="form-group">
-                <label asp-for="Tür" class="control-label"></label>
-                <input asp-for="Tür" class="form-control" />
-                <span asp-validation-for="Tür" class="text-danger"></span>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+                    Erkek
+                </label>
             </div>
+            <br />
+            <div>TÜR</div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" value="">
+                    Bireysel
+                </label>
+            </div>
+            <div class="form-check disabled">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" value="">
+                    Kurumsal
+                </label>
+            </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Kurum" class="control-label"></label>
+                <label for="exampleTextarea">KURUM</label>
                 <input asp-for="Kurum" class="form-control" />
                 <span asp-validation-for="Kurum" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Özgeçmiş" class="control-label"></label>
-                <input asp-for="Özgeçmiş" class="form-control" />
-                <span asp-validation-for="Özgeçmiş" class="text-danger"></span>
+                <label for="exampleTextarea">ÖZGEÇMİŞ</label>
+                <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Adres" class="control-label"></label>
+                <label for="exampleTextarea">ADRES</label>
                 <input asp-for="Adres" class="form-control" />
                 <span asp-validation-for="Adres" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label for="exampleInputEmail1">EMAİL</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Şifre" class="control-label"></label>
-                <input asp-for="Şifre" class="form-control" />
+                <label for="exampleInputPassword1">ŞİFRE</label>
+                <input asp-for="Şifre" type="password" class="form-control">
                 <span asp-validation-for="Şifre" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+                <small id="fileHelp" class="form-text text-muted">Lütfen kayıt olmak için vesikalık fotoğraf seçiniz</small>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Kayıt Ol" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
