--- a/Online-Clinic/Views/Home/Login.cshtml
+++ b/Online-Clinic/Views/Home/Login.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Giriş";
+    ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 
 <html lang="en">
 <head>
@@ -32,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--===============================================================================================-->
 </head>
+
 <body>
     <div class="limiter">
         <div class="container-login100">
@@ -39,7 +39,7 @@
                 <form class="login100-form validate-form">
                     <div>
                         <span class="txt1">
-                            GİRİŞ YAP
+                            Online-Clinic
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate="Enter username">
@@ -83,7 +83,6 @@
         </div>
     </div>
 
-
     <div id="dropDownSelect1"></div>
 
     <!--===============================================================================================-->
@@ -102,8 +101,5 @@
     <script src="vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
-
-
 </body>
-
 </html>
