--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
 
                 <ul class="navbar-nav flex-grow-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Giriş">Giriş Yap</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Giriş Yap</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Doktor" asp-action="Create">Üye Ol</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Kayıt Ol</a>
                     </li>
                 </ul>
                         
