--- a/Online-Clinic/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @using Online_Clinic.Areas.Identity
 @using Online_Clinic.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Online_Clinic.Areas.Identity.Pages.Account
+
