--- a/Online-Clinic/Views/Hasta/Create.cshtml
+++ b/Online-Clinic/Views/Hasta/Create.cshtml
@@ -5,6 +5,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1>Create</h1>
 
 <h4>Hasta</h4>
@@ -40,7 +60,7 @@
             <br />
             <div class="form-group">
                 <label for="exampleTextarea">HASTALIK GEÇMİŞİ</label>
-                <input asp-for="HastalıkGeçmişi" style="text-align" class="form-control" />
+                <input asp-for="HastalıkGeçmişi" style="text-align:center" class="form-control" />
             </div>
             <br />
             <div>KRONİK HASTALIKLAR</div>
