--- a/Online-Clinic/Views/Shared/_DefaultLayout.cshtml
+++ b/Online-Clinic/Views/Shared/_DefaultLayout.cshtml
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
 
-     <title>Health - Medical Website </title>
-<!--
+    <title>Health - Medical Website </title>
+    <!--
 
-Template 2098 Health
+    Template 2098 Health
 
-http://www.tooplate.com/view/2098-health
+    http://www.tooplate.com/view/2098-health
 
--->
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="Tooplate">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Tooplate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="~/HomeIndex/css/bootstrap.min.css">
-     <link rel="stylesheet" href="~/HomeIndex/css/font-awesome.min.css">
-     <link rel="stylesheet" href="~/HomeIndex/css/animate.css">
-     <link rel="stylesheet" href="~/HomeIndex/css/owl.carousel.css">
-     <link rel="stylesheet" href="~/HomeIndex/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/HomeIndex/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/HomeIndex/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/HomeIndex/css/animate.css">
+    <link rel="stylesheet" href="~/HomeIndex/css/owl.carousel.css">
+    <link rel="stylesheet" href="~/HomeIndex/css/owl.theme.default.min.css">
 
-     <!-- MAIN CSS -->
-     <link rel="stylesheet" href="~/HomeIndex/css/tooplate-style.css">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="~/HomeIndex/css/tooplate-style.css">
 
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -82,13 +82,12 @@ http://www.tooplate.com/view/2098-health
                         <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
                         <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
                         <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
-                        @*<li class="appointment-btn"><a asp-controller="Home" asp-action="Login">Giriş Yap</a></li>*@
-                        @*<li class="appointment-btn"><a asp-controller="Home" asp-action="Register">Üye Ol</a></li>*@
-                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+                        <li class="appointment-btn"><a asp-controller="Home" asp-action="Login">Giriş Yap</a></li>
+                        <li class="appointment-btn"><a asp-controller="Home" asp-action="Register">Üye Ol</a></li>
+                        @*<li class="appointment-btn"><a asp-area="Identity" asp-page="/Register">Register</a></li>
+                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Login">Login</a></li>*@
                     </ul>
                 </div>
-
             </div>
         </section>
     </div>
@@ -199,4 +198,5 @@ http://www.tooplate.com/view/2098-health
     <script src="~/HomeIndex/js/owl.carousel.min.js"></script>
     <script src="~/HomeIndex/js/custom.js"></script>
 
-</body></html>
+</body>
+</html>
