--- a/Online-Clinic/Views/Hasta/Index.cshtml
+++ b/Online-Clinic/Views/Hasta/Index.cshtml
@@ -1,60 +1,101 @@
-﻿@model IEnumerable<Online_Clinic.DataAccess.Hasta>
+﻿@model System.Collections.Generic.List<Online_Clinic.DataAccess.Hasta>
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div>
+    <!-- TEAM -->
+    <section id="team" data-stellar-background-ratio="1" style="background-position: 0px 0px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-6">
+                    <div class="about-info">
+                        <h2 class="wow fadeInUp animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">Hasta Hikayeleri</h2>
+                    </div>
+                </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.AdSoyad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DoğumTarihi)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Cinsiyet)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Şifre)
-            </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdSoyad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DoğumTarihi)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Cinsiyet)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Şifre)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.HastaID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.HastaID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.HastaID">Delete</a>
-            </td>*@
-        </tr>
-}
-    </tbody>
-</table>
+                <div class="clearfix"></div>
+
+
+                @using (Html.BeginForm("Index", "Hasta", FormMethod.Post))
+                {
+
+                    @foreach (var item in Model)
+                    {
+                        <a class="btn btn-video" style="background-color:rgba(9, 198, 171, 0.8); border-color:none; color:white" href="@Url.Action("Create", "Hasta", new { id = item.HastaID})">Create</a>
+
+                        <div class="col-md-4 col-sm-6">
+                            <div class="team-thumb wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                                <img src="~/HomeIndex/images/team-image1.jpg" class="img-responsive" alt="">
+                                <div class="team-info">
+                                    <h3>@item.AdSoyad</h3>
+                                    <p>@item.HastalıkGeçmişi</p>
+                                    <div class="team-contact-info">
+                                        @*<p><i class="fa fa-phone"></i> 010-020-0120</p>*@
+                                        <p><i class="fa fa-envelope-o"></i> <a href="#">@item.Email</a></p>
+                                    </div>
+                                    <ul class="social-icon">
+                                        <li><a href="#" class="fa fa-linkedin-square"></a></li>
+                                        <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+
+
+
+
+
+                @*<div class="col-md-4 col-sm-6">
+            <div class="team-thumb wow fadeInUp animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                <img src="~/HomeIndex/images/team-image2.jpg" class="img-responsive" alt="">
+
+                <div class="team-info">
+                    <h3>Jason Stewart</h3>
+                    <p>Pregnancy</p>
+                    <div class="team-contact-info">
+                        <p><i class="fa fa-phone"></i> 010-070-0170</p>
+                        <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
+                    </div>
+                    <ul class="social-icon">
+                        <li><a href="#" class="fa fa-facebook-square"></a></li>
+                        <li><a href="#" class="fa fa-envelope-o"></a></li>
+                        <li><a href="#" class="fa fa-flickr"></a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6">
+            <div class="team-thumb wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
+                <img src="~/HomeIndex/images/team-image3.jpg" class="img-responsive" alt="">
+
+                <div class="team-info">
+                    <h3>Miasha Nakahara</h3>
+                    <p>Cardiology</p>
+                    <div class="team-contact-info">
+                        <p><i class="fa fa-phone"></i> 010-040-0140</p>
+                        <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
+                    </div>
+                    <ul class="social-icon">
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-envelope-o"></a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>*@
+
+            </div>
+        </div>
+    </section>
+
+</div>
+
+
+
