--- a/Online-Clinic/Views/Doktor/Index.cshtml
+++ b/Online-Clinic/Views/Doktor/Index.cshtml
@@ -8,6 +8,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<a class="btn btn-success" asp-controller="Randevu" asp-action="Index">Randevu Al</a>
+<a class="btn btn-success" asp-controller="Randevu" asp-action="Create">Randevu Al</a>
 
 
+
+<a class="btn btn-success" asp-controller="Randevu" asp-action="Index">Randevularım</a>
