--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Ana Sayfa";
-    Layout = "/Views/Shared/_DefaultLayout.cshtml";
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
 <meta charset="UTF-8">
