--- a/Online-Clinic/Views/Home/Login.cshtml
+++ b/Online-Clinic/Views/Home/Login.cshtml
@@ -1,12 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     ViewData["Title"] = "Login";
 }
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <title>Login V18</title>
     <meta charset="UTF-8">
@@ -34,68 +29,65 @@
     <link rel="stylesheet" type="text/css" href="~/login/css/main.css">
     <!--===============================================================================================-->
 </head>
-<body style="background-color: white">
 
-    <div class="limiter">
-        <form class="login100-form validate-form" style="margin: auto">
-            <span class="login100-form-title p-b-43">
-                ONLINE-CLINIC
+<body>
+
+    <form class="login100-form validate-form" style="margin: auto">
+        <span class="login100-form-title p-b-43">
+            ONLINE-CLINIC
+        </span>
+
+        <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+            <input class="input100" type="text" name="email">
+            <span class="focus-input100"></span>
+            <span class="label-input100">E-mail</span>
+        </div>
+
+
+        <div class="wrap-input100 validate-input" data-validate="Password is required">
+            <input class="input100" type="password" name="pass">
+            <span class="focus-input100"></span>
+            <span class="label-input100">Şifre</span>
+        </div>
+
+        <div class="flex-sb-m w-full p-t-3 p-b-32">
+            <div class="contact100-form-checkbox">
+                <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                <label class="label-checkbox100" for="ckb1">
+                    Beni Hatırla
+                </label>
+            </div>
+
+            <div>
+                <a href="#" class="txt1">
+                    Şifrenizi mi Unuttunuz?
+                </a>
+            </div>
+        </div>
+
+
+        <div class="container-login100-form-btn">
+            <button class="login100-form-btn">
+                GİRİŞ YAP
+            </button>
+        </div>
+
+        <div class="text-center p-t-46 p-b-20">
+            <span class="txt2">
+                veya KAYIT OL
             </span>
+        </div>
 
-            <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                <input class="input100" type="text" name="email">
-                <span class="focus-input100"></span>
-                <span class="label-input100">E-mail</span>
-            </div>
+        <div class="login100-form-social flex-c-m">
+            <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
+                <i class="fa fa-facebook-f" aria-hidden="true"></i>
+            </a>
 
-
-            <div class="wrap-input100 validate-input" data-validate="Password is required">
-                <input class="input100" type="password" name="pass">
-                <span class="focus-input100"></span>
-                <span class="label-input100">Şifre</span>
-            </div>
-
-            <div class="flex-sb-m w-full p-t-3 p-b-32">
-                <div class="contact100-form-checkbox">
-                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                    <label class="label-checkbox100" for="ckb1">
-                        Beni Hatırla
-                    </label>
-                </div>
-
-                <div>
-                    <a href="#" class="txt1">
-                        Şifrenizi mi Unuttunuz?
-                    </a>
-                </div>
-            </div>
-
-
-            <div class="container-login100-form-btn">
-                <button class="login100-form-btn">
-                    GİRİŞ YAP
-                </button>
-            </div>
-
-            <div class="text-center p-t-46 p-b-20">
-                <span class="txt2">
-                    veya KAYIT OL
-                </span>
-            </div>
-
-            <div class="login100-form-social flex-c-m">
-                <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                    <i class="fa fa-facebook-f" aria-hidden="true"></i>
-                </a>
-
-                <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-            </div>
-        </form>
-    </div>
-
-
+            <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+        </div>
+    </form>
 
 
 
@@ -118,4 +110,4 @@
 
 
 </body>
-</html>
+
