--- a/Online-Clinic/Views/Randevu/Index.cshtml
+++ b/Online-Clinic/Views/Randevu/Index.cshtml
@@ -1,86 +1,63 @@
-﻿@*@model IEnumerable<Online_Clinic.Common.ViewModels.RandevuVM>*@
+﻿@model System.Collections.Generic.IEnumerable<Online_Clinic.Common.ViewModels.RandevuVM>
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!-- MAKE AN APPOINTMENT -->
-<section id="appointment" data-stellar-background-ratio="3" style="background-position: 0px 6726.2px;">
-    <div class="container">
-        <div class="row">
+<h1>Index</h1>
 
-            <div class="col-md-6 col-sm-6">
-                <img src="~/HomeIndex/images/appointment-image.jpg" class="img-responsive" alt="">
-            </div>
+<p>
+    <a asp-action="Index">Randevularım</a>
+</p>
 
-            <div class="col-md-6 col-sm-6">
-                <!-- CONTACT FORM HERE -->
-                <form id="appointment-form" role="form" method="post" action="#">
-
-                    <!-- SECTION TITLE -->
-                    <div class="section-title wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                        <h2>Randevu Al</h2>
-                    </div>
-
-                    @using (Html.BeginForm("Index", "Hasta", FormMethod.Post))
-                    {
-                <div class="wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                    <div class="col-md-6 col-sm-6">
-                        <label for="name">Tam Adınız</label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
-
-                    @*<div class="col-md-6 col-sm-6">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="E-mail Adresiniz">
-        </div>*@
-                    <div class="col-md-6 col-sm-6">
-                        <label for="select">Bölüm Seçiniz</label>
-                        <select class="form-control">
-                            <option>Branş Seçiniz</option>
-                            <option>Beyin ve Sinir Cerrahisi</option>
-                            <option>Kalp ve Damar Cerrahisi</option>
-                            <option>Çocuk Cerrahisi</option>
-                            <option>Genel Cerrahi</option>
-                            <option>Göğüs Cerrahisi</option>
-                            <option>Kulak Burun Boğaz Hastalıkları</option>
-                            <option>Plastik Cerrahi</option>
-                            <option>Ortopedi</option>
-                            <option>Göz Hastalıkları</option>
-                            <option>Üroloji</option>
-                        </select>
-                    </div>
-
-
-                    <div class="col-md-6 col-sm-6">
-                        <label for="date">Tarih Seçiniz</label>
-                        <input type="date" name="date" value="" class="form-control">
-                    </div>
-
-                    <div class="col-md-6 col-sm-6">
-                        <label for="date">Saat Seçiniz</label>
-                        <input type="time" name="time" value="" class="form-control">
-                    </div>
+<table>
+    <thead>
+        <tr>
+            <th>
+                Hastanın Adı
+            </th>
+            <th>
+                Tarih
+            </th>
+            <th>
+               Saat
+            </th>
+            <th>
+                Telefon
+            </th>
+            <th>
+                E-mail
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            @if (item != null)
+            {
+                <tr>
+                    <th>
+                        @item.TamAd
+                    </th>
+                    <th>
+                        @item.Tarih
+                    </th>
+                    <th>
+                        @item.Saat
+                    </th>
+                    <th>
+                        @item.Telefon
+                    </th>
+                    <th>
+                        @item.Email
+                    </th>
+                </tr>
+            }
+        }
+    </tbody>
+</table>
 
 
 
-                    <div class="col-md-12 col-sm-12">
-                        <label for="telephone">Telefon Numaranız</label>
-                        <input type="tel" class="form-control" id="phone" name="phone">
-                        <label for="emailaddress">E-mail Adresiniz</label>
-                        <input type="email" class="form-control" id="email" name="email" >
-                        <label for="Message">Eklemek İstediğiniz Bir Mesaj Var mı?</label>
-                        <textarea class="form-control" rows="5" id="message" name="message"></textarea>
-                        <button type="submit" class="form-control" id="cf-submit" name="submit">Randevu Al</button>
-                    </div>
-                </div>
-                    }
 
-
-                </form>
-            </div>
-
-        </div>
-    </div>
-</section>
