--- a/Online-Clinic/Views/Shared/_DefaultLayout.cshtml
+++ b/Online-Clinic/Views/Shared/_DefaultLayout.cshtml
@@ -78,7 +78,7 @@
                 <!-- MENU LINKS -->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#top" class="smoothScroll">Anasayfa</a></li>
+                        <li class="active"><a asp-controller="Home" asp-action="Index" class="smoothScroll">Anasayfa</a></li>
                         <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
                         <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
                         <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
