--- a/Online-Clinic/Views/_ViewImports.cshtml
+++ b/Online-Clinic/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Online_Clinic
 @using Online_Clinic.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Online_Clinic.Common.ViewModels
