--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -77,13 +77,14 @@
 
                 <!-- MENU LINKS -->
                 <div class="collapse navbar-collapse">
+                    <partial name="_LoginPartial" />
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a asp-controller="Home" asp-action="Index" class="smoothScroll">Anasayfa</a></li>
                         <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
                         <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
                         <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
-                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+                        @*<li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+                        <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>*@
                     </ul>
                 </div>
             </div>
