--- a/Online-Clinic/Areas/Identity/Pages/Account/BağışçıRegister.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/BağışçıRegister.cshtml
@@ -2,7 +2,7 @@
 @model RegisterModel
 
 @{
-    ViewData["Title"] = "Hasta Kayıt";
+    ViewData["Title"] = "Bağışçı Kayıt";
 }
 
 <h2>@ViewData["Title"]</h2>
