--- a/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,8 +7,8 @@
 <h2>@ViewData["Title"]</h2>
 
 <div style="margin-top:150px; margin-bottom:50px">
-    <a class="btn btn-primary btn-lg btn-block" asp-area="" asp-controller="Bağışçı" asp-action="Create">Bağışçı</a>
-    <a class="btn btn-primary btn-lg btn-block" asp-area="" asp-controller="Doktor" asp-action="Create">Doktor</a>
+    <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/BağışçıRegister">Bağışçı</a>
+    <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/DoktorRegister">Doktor</a>
     <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/HastaRegister">Hasta</a>
 </div>
 
